--- a/javascript/javaScript-web/getElementByName/index.html
+++ b/javascript/javaScript-web/getElementByName/index.html
@@ -9,6 +9,10 @@
 <body>
   <h1 id="main-text">Meu primeiro site</h1>
 
+  <input type="text" name="my-input">
+
+  <input type="text" name="my-input">
+
   <p class="paragraph">Meu parágrafo</p>
 
   <p class="paragraph">Segundo parágrafo</p>
