--- a/projeto-html/index.html
+++ b/projeto-html/index.html
@@ -11,12 +11,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
-    <title>DevClub Converter Money</title>
+    <title>Converter Money</title>
   </head>
   <body>
     <div class="container">
       <header>
-        <h1>DevClub Converter Money</h1>
+        <h1>Converter Money</h1>
       </header>
       <main>
         <label>
