--- a/css-flexBox/flex-flow/index.html
+++ b/css-flexBox/flex-flow/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css">
-    <title>flex Flow</title>
+    <title>flex Direction</title>
   </head>
   <body>
-    <h1>Flex Wrap</h1>
+    <h1>Flex Direction</h1>
     <div class="container">
       <div class="block">bloco 1</div>
       <div class="block">bloco 2</div>
