--- a/css-flexBox/flex-basis/index.html
+++ b/css-flexBox/flex-basis/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css">
-    <title>Justify content</title>
+    <title>Flex basis</title>
   </head>
   <body>
-    <h1>Justify Content</h1>
+    <h1>Flex basis</h1>
     <div class="container">
       <div class="block">Bloco 1</div>
       <div class="block">Bloco 2</div>
