--- a/reactJS/iniciando-projeto-react-vite/first-project-react/index.html
+++ b/reactJS/iniciando-projeto-react-vite/first-project-react/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;1,300;1,400&display=swap"
       rel="stylesheet"
     />
-    <title>Project React</title>
+    <title>Project React for Vite</title>
   </head>
   <body>
     <div id="root"></div>
