--- a/projetos/projeto-shopping-responsive/index.html
+++ b/projetos/projeto-shopping-responsive/index.html
@@ -14,22 +14,24 @@
     <title>CSS - Project</title>
   </head>
   <body>
-    <section>
-      <h1>Easy Shopping Via Mobile</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur,
-        est ab sint laudanum!
-      </p>
-      <button>Get started</button>
-    </section>
-    <section>
-      <header>
-        <a href="#">Home</a>
-        <a href="#">Work</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-      </header>
-      <img src="" alt="" />
-    </section>
+    <main>
+      <section class="container-left">
+        <h1>Easy Shopping Via Mobile</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur,
+          est ab sint laudanum!
+        </p>
+        <button>Get started</button>
+      </section>
+      <section class="container-right">
+        <header>
+          <a href="#">Home</a>
+          <a href="#">Work</a>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+        </header>
+        <img src="./assets/Illustration-3-3.svg" alt="girl-cellphone" />
+      </section>
+    </main>
   </body>
 </html>
