add to css in header

--- a/projetos/projeto-shopping-responsive/index.html
+++ b/projetos/projeto-shopping-responsive/index.html
@@ -19,14 +19,15 @@
         <h1>Easy Shopping Via Mobile</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur,
-          est ab sint laudanum!
+          est ab sint laudanum! Lorem ipsum dolor sit amet consectetur
+          adipisicing elit.
         </p>
         <button>Get started</button>
       </section>
       <section class="container-right">
         <header>
           <a href="#">Home</a>
-          <a href="#">Work</a>
+          <a class="work" href="#">Work</a>
           <a href="#">About</a>
           <a href="#">Contact</a>
         </header>
