--- a/projetos/projeto-shopping-responsive/index.html
+++ b/projetos/projeto-shopping-responsive/index.html
@@ -27,7 +27,7 @@
       <section class="container-right">
         <header>
           <a href="#">Home</a>
-          <a class="work" href="#">Work</a>
+          <a href="#">Work</a>
           <a href="#">About</a>
           <a href="#">Contact</a>
         </header>
